fix: all warnings and deprecated